@@ -18,6 +18,10 @@
 package com.graphhopper;
 
 import com.bedatadriven.jackson.datatype.jts.JtsModule;
+import com.carrotsearch.hppc.BitSet;
+import com.carrotsearch.hppc.IntArrayList;
+import com.carrotsearch.hppc.LongArrayList;
+import com.carrotsearch.hppc.sorting.IndirectSort;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.graphhopper.config.CHProfile;
 import com.graphhopper.config.LMProfile;
@@ -100,6 +104,7 @@ public class GraphHopper {
     private String ghLocation = "";
     private DAType dataAccessDefaultType = DAType.RAM_STORE;
     private final LinkedHashMap<String, String> dataAccessConfig = new LinkedHashMap<>();
+    private boolean sortGraph = true;
     private boolean elevation = false;
     private LockFactory lockFactory = new NativeFSLockFactory();
     private boolean allowWrites = true;
@@ -346,6 +351,11 @@ public class GraphHopper {
         return this;
     }
 
+    public GraphHopper setSortGraph(boolean sortGraph) {
+        this.sortGraph = sortGraph;
+        return this;
+    }
+
     /**
      * The underlying graph used in algorithms.
      *
@@ -494,6 +504,7 @@ public class GraphHopper {
                 dataAccessConfig.put(entry.getKey().substring("graph.dataaccess.mmap.".length()), entry.getValue().toString());
         }
 
+        sortGraph = ghConfig.getBool("graph.sort", sortGraph);
         if (ghConfig.getBool("max_speed_calculator.enabled", false))
             maxSpeedCalculator = new MaxSpeedCalculator(MaxSpeedCalculator.createLegalDefaultSpeeds());
 
@@ -604,7 +615,8 @@ public class GraphHopper {
                 })
                 .filter(Objects::nonNull)
                 .toList());
-        profilesByName.values().forEach(profile -> encodedValues.add(Subnetwork.create(profile.getName())));
+
+        encodedValues.addAll(createSubnetworkEncodedValues());
 
         List<String> sortedEVs = getEVSortIndex(profilesByName);
         encodedValues.sort(Comparator.comparingInt(ev -> sortedEVs.indexOf(ev.getName())));
@@ -615,6 +627,10 @@ public class GraphHopper {
                 .filter(e -> !e.getValue().isEmpty())
                 .forEach(e -> emBuilder.addTurnCostEncodedValue(TurnRestriction.create(e.getKey())));
         return emBuilder.build();
+    }
+
+    protected List<BooleanEncodedValue> createSubnetworkEncodedValues() {
+        return profilesByName.values().stream().map(profile -> Subnetwork.create(profile.getName())).toList();
     }
 
     protected List<String> getEVSortIndex(Map<String, Profile> profilesByName) {
@@ -850,10 +866,10 @@ public class GraphHopper {
                     "graph.encoded_values: " + encodedValuesString);
         }
 
-        // these are used in the snap prevention filter (avoid motorway, tunnel, etc.) so they have to be there
+        // following encoded values are used by instructions and in the snap prevention filter (avoid motorway, tunnel, etc.)
         encodedValuesWithProps.putIfAbsent(RoadClass.KEY, new PMap());
         encodedValuesWithProps.putIfAbsent(RoadEnvironment.KEY, new PMap());
-        // used by instructions...
+        // now only used by instructions:
         encodedValuesWithProps.putIfAbsent(Roundabout.KEY, new PMap());
         encodedValuesWithProps.putIfAbsent(VehicleAccess.key("car"), new PMap());
         encodedValuesWithProps.putIfAbsent(RoadClassLink.KEY, new PMap());
@@ -888,7 +904,6 @@ public class GraphHopper {
         // These are simply copies of real edges. Any further modifications of the graph edges must take care of keeping
         // the artificial edges in sync with their real counterparts. So if an edge attribute shall be changed this change
         // must also be applied to the corresponding artificial edge.
-
         calculateUrbanDensity();
 
         if (maxSpeedCalculator != null) {
@@ -898,6 +913,9 @@ public class GraphHopper {
 
         if (hasElevation())
             interpolateBridgesTunnelsAndFerries();
+
+        if (sortGraph)
+            sortGraphAlongHilbertCurve(baseGraph);
     }
 
     protected void importOSM() {
@@ -946,6 +964,79 @@ public class GraphHopper {
         properties.create(100);
         if (maxSpeedCalculator != null)
             maxSpeedCalculator.createDataAccessForParser(baseGraph.getDirectory());
+    }
+
+    public static void sortGraphAlongHilbertCurve(BaseGraph graph) {
+        logger.info("sorting graph along Hilbert curve...");
+        StopWatch sw = StopWatch.started();
+        NodeAccess na = graph.getNodeAccess();
+        final int order = 31; // using 15 would allow us to use ints for sortIndices, but this would result in (marginally) slower routing
+        LongArrayList sortIndices = new LongArrayList();
+        for (int node = 0; node < graph.getNodes(); node++)
+            sortIndices.add(latLonToHilbertIndex(na.getLat(node), na.getLon(node), order));
+        int[] nodeOrder = IndirectSort.mergesort(0, graph.getNodes(), (nodeA, nodeB) -> Long.compare(sortIndices.get(nodeA), sortIndices.get(nodeB)));
+        EdgeExplorer explorer = graph.createEdgeExplorer();
+        int edges = graph.getEdges();
+        IntArrayList edgeOrder = new IntArrayList();
+        com.carrotsearch.hppc.BitSet edgesFound = new BitSet(edges);
+        for (int node : nodeOrder) {
+            EdgeIterator iter = explorer.setBaseNode(node);
+            while (iter.next()) {
+                if (!edgesFound.get(iter.getEdge())) {
+                    edgeOrder.add(iter.getEdge());
+                    edgesFound.set(iter.getEdge());
+                }
+            }
+        }
+        IntArrayList newEdgesByOldEdges = ArrayUtil.invert(edgeOrder);
+        IntArrayList newNodesByOldNodes = IntArrayList.from(ArrayUtil.invert(nodeOrder));
+        logger.info("calculating sort order took: " + sw.stop().getTimeString());
+        sortGraphForGivenOrdering(graph, newNodesByOldNodes, newEdgesByOldEdges);
+    }
+
+    public static void sortGraphForGivenOrdering(BaseGraph baseGraph, IntArrayList newNodesByOldNodes, IntArrayList newEdgesByOldEdges) {
+        if (!ArrayUtil.isPermutation(newEdgesByOldEdges))
+            throw new IllegalStateException("New edges: not a permutation");
+        if (!ArrayUtil.isPermutation(newNodesByOldNodes))
+            throw new IllegalStateException("New nodes: not a permutation");
+        logger.info("sort graph for fixed ordering...");
+        StopWatch sw = new StopWatch().start();
+        baseGraph.sortEdges(newEdgesByOldEdges::get);
+        logger.info("sorting {} edges took: {}", Helper.nf(newEdgesByOldEdges.size()), sw.stop().getTimeString());
+        sw = new StopWatch().start();
+        baseGraph.relabelNodes(newNodesByOldNodes::get);
+        logger.info("sorting {} nodes took: {}", Helper.nf(newNodesByOldNodes.size()), sw.stop().getTimeString());
+    }
+
+    public static long latLonToHilbertIndex(double lat, double lon, int order) {
+        double nx = (lon + 180) / 360;
+        double ny = (90 - lat) / 180;
+        long size = 1L << order;
+        long x = (long) (nx * size);
+        long y = (long) (ny * size);
+        x = Math.max(0, Math.min(size - 1, x));
+        y = Math.max(0, Math.min(size - 1, y));
+        return xy2d(order, x, y);
+    }
+
+    public static long xy2d(int n, long x, long y) {
+        long d = 0;
+        for (long s = 1L << (n - 1); s > 0; s >>= 1) {
+            int rx = (x & s) > 0 ? 1 : 0;
+            int ry = (y & s) > 0 ? 1 : 0;
+            d += s * s * ((3 * rx) ^ ry);
+            // rotate
+            if (ry == 0) {
+                if (rx == 1) {
+                    x = s - 1 - x;
+                    y = s - 1 - y;
+                }
+                long tmp = x;
+                x = y;
+                y = tmp;
+            }
+        }
+        return d;
     }
 
     private void calculateUrbanDensity() {
@@ -1050,6 +1141,7 @@ public class GraphHopper {
                     .withTurnCosts(encodingManager.needsTurnCostsSupport())
                     .setSegmentSize(defaultSegmentSize)
                     .build();
+            checkProfilesConsistency();
             baseGraph.loadExisting();
             String storedProfiles = properties.get("profiles");
             String configuredProfiles = getProfilesString();
@@ -1058,7 +1150,6 @@ public class GraphHopper {
                         + "\nGraphhopper config: " + configuredProfiles
                         + "\nGraph: " + storedProfiles
                         + "\nChange configuration to match the graph or delete " + baseGraph.getDirectory().getLocation());
-            checkProfilesConsistency();
 
             postProcessing(false);
             directory.loadMMap();
@@ -1070,8 +1161,12 @@ public class GraphHopper {
         }
     }
 
+    protected int getProfileHash(Profile profile) {
+        return profile.getVersion();
+    }
+
     private String getProfilesString() {
-        return profilesByName.values().stream().map(p -> p.getName() + "|" + p.getVersion()).collect(Collectors.joining(","));
+        return profilesByName.values().stream().map(p -> p.getName() + "|" + getProfileHash(p)).collect(Collectors.joining(","));
     }
 
     public void checkProfilesConsistency() {
@@ -1321,7 +1416,7 @@ public class GraphHopper {
     protected void loadOrPrepareCH(boolean closeEarly) {
         for (CHProfile profile : chPreparationHandler.getCHProfiles())
             if (!getCHProfileVersion(profile.getProfile()).isEmpty()
-                    && !getCHProfileVersion(profile.getProfile()).equals("" + profilesByName.get(profile.getProfile()).getVersion()))
+                    && !getCHProfileVersion(profile.getProfile()).equals("" + getProfileHash(profilesByName.get(profile.getProfile()))))
                 throw new IllegalArgumentException("CH preparation of " + profile.getProfile() + " already exists in storage and doesn't match configuration");
 
         // we load ch graphs that already exist and prepare the other ones
@@ -1336,7 +1431,7 @@ public class GraphHopper {
             if (loaded.containsKey(profile.getProfile()) && prepared.containsKey(profile.getProfile()))
                 throw new IllegalStateException("CH graph should be either loaded or prepared, but not both: " + profile.getProfile());
             else if (prepared.containsKey(profile.getProfile())) {
-                setCHProfileVersion(profile.getProfile(), profilesByName.get(profile.getProfile()).getVersion());
+                setCHProfileVersion(profile.getProfile(), getProfileHash(profilesByName.get(profile.getProfile())));
                 PrepareContractionHierarchies.Result res = prepared.get(profile.getProfile());
                 chGraphs.put(profile.getProfile(), RoutingCHGraphImpl.fromGraph(baseGraph.getBaseGraph(), res.getCHStorage(), res.getCHConfig()));
             } else if (loaded.containsKey(profile.getProfile())) {
@@ -1360,13 +1455,13 @@ public class GraphHopper {
     protected void loadOrPrepareLM(boolean closeEarly) {
         for (LMProfile profile : lmPreparationHandler.getLMProfiles())
             if (!getLMProfileVersion(profile.getProfile()).isEmpty()
-                    && !getLMProfileVersion(profile.getProfile()).equals("" + profilesByName.get(profile.getProfile()).getVersion()))
+                    && !getLMProfileVersion(profile.getProfile()).equals("" + getProfileHash(profilesByName.get(profile.getProfile()))))
                 throw new IllegalArgumentException("LM preparation of " + profile.getProfile() + " already exists in storage and doesn't match configuration");
 
         // we load landmark storages that already exist and prepare the other ones
         List<LMConfig> lmConfigs = createLMConfigs(lmPreparationHandler.getLMProfiles());
         List<LandmarkStorage> loaded = lmPreparationHandler.load(lmConfigs, baseGraph, encodingManager);
-        List<LMConfig> loadedConfigs = loaded.stream().map(LandmarkStorage::getLMConfig).collect(Collectors.toList());
+        List<LMConfig> loadedConfigs = loaded.stream().map(LandmarkStorage::getLMConfig).toList();
         List<LMConfig> configsToPrepare = lmConfigs.stream().filter(c -> !loadedConfigs.contains(c)).collect(Collectors.toList());
         List<PrepareLandmarks> prepared = prepareLM(closeEarly, configsToPrepare);
 
@@ -1380,7 +1475,7 @@ public class GraphHopper {
             if (loadedLMS.isPresent() && preparedLMS.isPresent())
                 throw new IllegalStateException("LM should be either loaded or prepared, but not both: " + prepProfile);
             else if (preparedLMS.isPresent()) {
-                setLMProfileVersion(lmp.getProfile(), profilesByName.get(lmp.getProfile()).getVersion());
+                setLMProfileVersion(lmp.getProfile(), getProfileHash(profilesByName.get(lmp.getProfile())));
                 landmarks.put(lmp.getProfile(), preparedLMS.get().getLandmarkStorage());
             } else
                 loadedLMS.ifPresent(landmarkStorage -> landmarks.put(lmp.getProfile(), landmarkStorage));
